[gd_scene load_steps=5 format=2]

[ext_resource path="res://Debug/PublicPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Debug/Debugger.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 2
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Debugger" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="VelocityX" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 2.0

[node name="VelocityY" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 8.0

[node name="PositionX" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 40.0
margin_bottom = 14.0

[node name="PositionY" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 20.0

[node name="CurrentDirection" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 26.0

[node name="CurrentAnimation" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 40.0
margin_bottom = 32.0

[node name="CurrentState" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 38.0
